# flask_dash_app

./: README.md  main.py  pyproject.toml  quick_setup.py  requirements.txt
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
plotly_flask_app/: routes.py
plotly_flask_app/dashboard/: layout.py
plotly_flask_app/templates/: index.jinja2  layout.jinja2
